[gd_scene load_steps=8 format=3 uid="uid://b1e5tur6memej"]

[ext_resource type="Script" uid="uid://dbleug2gqv7c5" path="res://scripts/nodes/interactive.gd" id="1_51xss"]
[ext_resource type="Script" uid="uid://c6fwss4rippt7" path="res://scripts/nodes/simple_car.gd" id="1_ls0ui"]
[ext_resource type="PackedScene" uid="uid://cobhm38x3170i" path="res://scenes/prefabs/vehicles/wheel.tscn" id="2_ce6gi"]
[ext_resource type="AudioStream" uid="uid://bn584unj1f8sf" path="res://assets/audio/vehicle/engine.mp3" id="3_wkwv2"]
[ext_resource type="Script" uid="uid://d21y1uy7e6sf6" path="res://scripts/states/pawn_state_vehicle_keyboard.gd" id="6_3g0rj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_l1hn7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ce6gi"]
size = Vector3(2, 1, 3)

[node name="simple_car" type="VehicleBody3D" node_paths=PackedStringArray("mount_interactive")]
linear_damp = 1.0
angular_damp = 10.0
script = ExtResource("1_ls0ui")
suspension_stiff_value = 50.0
mount_interactive = NodePath("door_driver")

[node name="keyboard" type="Node3D" parent="." node_paths=PackedStringArray("pawn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5764842, 1.1941247, -0.82869554)
script = ExtResource("6_3g0rj")
pawn = NodePath("..")

[node name="door_driver" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1529675, 0.5, -0.67206043)
collision_layer = 512
collision_mask = 0
monitoring = false
script = ExtResource("1_51xss")
toggle_labels = PackedStringArray("Interact [Turn Off]", "Interact [Turn On]")

[node name="CollisionShape3D" type="CollisionShape3D" parent="door_driver"]
shape = SubResource("SphereShape3D_l1hn7")

[node name="wheel_front_driver" parent="." instance=ExtResource("2_ce6gi")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.90000004, 0, -1)
use_as_traction = true
use_as_steering = true

[node name="wheel_front_passenger" parent="." instance=ExtResource("2_ce6gi")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.90000004, 0, -1)
use_as_traction = true
use_as_steering = true

[node name="wheel_back_driver" parent="." instance=ExtResource("2_ce6gi")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.90000004, 0, 1)

[node name="wheel_back_passenger" parent="." instance=ExtResource("2_ce6gi")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.90000004, 0, 1)

[node name="light_front_driver" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9659258, 0.25881904, 0, -0.25881904, 0.9659258, -0.5, 0.6, -1.8000001)
visible = false
light_energy = 2.0
spot_range = 10.0
spot_attenuation = 2.0

[node name="light_front_passenger" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9659258, 0.25881904, 0, -0.25881904, 0.9659258, 0.5, 0.6, -1.8000001)
visible = false
light_energy = 2.0
spot_range = 10.0
spot_attenuation = 2.0

[node name="light_brake_driver" type="OmniLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, 1.6)
visible = false
light_color = Color(1, 0, 0, 1)
omni_range = 2.0

[node name="light_brake_passenger" type="OmniLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 1.6)
visible = false
light_color = Color(1, 0, 0, 1)
omni_range = 2.0

[node name="aux_engine" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_wkwv2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_ce6gi")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
size = Vector3(2, 1, 3)
